--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "selector",
-    "short_name": "selector",
+    "name": "Bhoomit Patel-Flutter Developer",
+    "short_name": "Bhoomit Patel",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Portfolio of bhoomit patel built with flutter.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
