--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/profile20.png":["assets/profile20.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/crypto_app.jpg":["assets/crypto_app.jpg"],"assets/healthcare_app.jpg":["assets/healthcare_app.jpg"],"assets/prayer_app.jpg":["assets/prayer_app.jpg"],"assets/profile20.png":["assets/profile20.png"],"assets/vehicle_tracking.png":["assets/vehicle_tracking.png"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
